Introducing apache commons text library to utilize WordUtils to support upper case query params for granuality, but return the value as Titlecase.  Updated unit tests accordingly
